<resources>
    <string name="app_name">U2P4Conversor</string>
    <string name="tvInfo">Conversor de pulgadas a centimetros</string>
    <string name="tvHintPedir">Introduce las pulgadas</string>
    <string name="btConvertir">Convertir</string>
    <string name="etHintResult">Resultado</string>
    <string name="btCentometros">Centimetros</string>
    <string name="tbPulgadas">Pulgadas</string>
    <string name="tvResultado">Resultado:</string>
</resources>